--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <!-- The JS SDK Login Button -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<fb:login-button scope="public_profile,email,pages_show_list,pages_messaging" onlogin="checkLoginState();">
 </fb:login-button>
 
 <div id="status">
